feat: rough donate API
