# dist/src/swagger.json
@@ -7,35 +7,18 @@
         "requestBodies": {},
         "responses": {},
         "schemas": {
-            "NftMetadata": {
-                "properties": {},
-                "type": "object",
-                "additionalProperties": {}
-            },
-            "Nft": {
+            "DonateRequest": {
                 "properties": {
-                    "contractAddress": {
-                        "type": "string"
-                    },
-                    "tokenId": {
-                        "type": "string"
-                    },
-                    "owner": {
+                    "recipient": {
                         "type": "string"
                     },
                     "amount": {
                         "type": "string"
-                    },
-                    "metadata": {
-                        "$ref": "#/components/schemas/NftMetadata"
                     }
                 },
                 "required": [
-                    "contractAddress",
-                    "tokenId",
-                    "owner",
-                    "amount",
-                    "metadata"
+                    "recipient",
+                    "amount"
                 ],
                 "type": "object",
                 "additionalProperties": false
@@ -52,29 +35,44 @@
         "contact": {}
     },
     "paths": {
-        "/nft": {
-            "get": {
-                "operationId": "GetNft",
+        "/framino/donate": {
+            "post": {
+                "operationId": "DonateUSDC",
                 "responses": {
                     "200": {
                         "description": "Ok",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "items": {
-                                        "$ref": "#/components/schemas/Nft"
+                                    "properties": {
+                                        "txHash": {
+                                            "type": "string"
+                                        }
                                     },
-                                    "type": "array"
+                                    "required": [
+                                        "txHash"
+                                    ],
+                                    "type": "object"
                                 }
                             }
                         }
                     }
                 },
                 "tags": [
-                    "NFT"
+                    "Framino"
                 ],
                 "security": [],
-                "parameters": []
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/DonateRequest"
+                            }
+                        }
+                    }
+                }
             }
         }
     },
