# src/controller/framinoController.ts
@@ -1,26 +1,30 @@
 import {
     Body,
     Controller,
-    Delete,
-    Get,
-    Path,
     Post,
-    Put,
     Route,
-    Security,
     Tags,
 } from "tsoa";
-import { Nft, NftMetadata } from "../model/framinoModel";
+import dotenv from "dotenv";
 import { FraminoService } from "../service/framinoService";
+import { DonateRequest } from "../model/framinoModel";
+dotenv.config();
 
 const framinoService = new FraminoService
 
-@Route("nft")
-@Tags("NFT")
+@Tags("Framino")
+@Route("framino")
 export class UserController extends Controller {    
-    @Get("")
-    public async getNft(): Promise<Nft[]> {
-        const result = await framinoService.getNft();
+    // @Get("")
+    // public async getNft(): Promise<Nft[]> {
+    //     const result = await framinoService.getNft();
+    //     return result;
+    // }
+
+    @Post("donate")
+    public async donateUSDC(@Body() body: DonateRequest): Promise<{ txHash: string }> {
+        const result = framinoService.donateUSDCService(body);
         return result;
     }
+
 }
